--- a/src/App.css
+++ b/src/App.css
@@ -14,25 +14,46 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #1A1A1A;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+textarea{
+  width: 600px; /* Set the width of the textarea */
+  height: 150px; /* Set the height of the textarea */
+  border-radius:10px;
+}
+input {
+  padding:10px;
+  margin:10px 0;
+  border-radius:10px;
+}
+button[name="submit"]{
+  padding:10px;
+  width:100px;
+  border-radius:10px;
+  background-color:#43d68d;
+}
 .App-link {
   color: #61dafb;
 }
+.diary-top{
+  display: flex;
+  justify-content: space-between;
+}
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  0% {
+    transform: scale(1.0);
   }
-  to {
-    transform: rotate(360deg);
+  50%{
+    transform: scale(1.1);
+  }
+  100%{
+    transform: scale(1.0);
   }
 }
